Changes for Mobile View

--- a/index.html
+++ b/index.html
@@ -76,54 +76,73 @@
                   </div>
                 </div>
               </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h4 style="text-align: center;">INTERESTS</h4>
+                  </div>
+                  <div class="col-md-6">
+                      <div class="interest-container">Cricket</div>
+                      <div class="interest-container">Tennis</div>
+                      <div class="interest-container">Urdu Poetry</div>
+                      <div class="interest-container">Artificial Intelligence</div>
+                      <div class="interest-container">Cyber Security</div>
+                      <div class="interest-container">Block Chain</div>
+                      <div class="interest-container">Cryptography</div>
+                      <div class="interest-container">Squash</div>
+                  </div>
+                </div>
+              </div>
         </section>
 
         <!-- Skills-->
-        <section class="page-section" id="skills">
+        <section class="page-section1" id="skills">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Skills</h2>
             </div>
+            
             <div class="py-5">
                 <div class="container">
+                  <hr>
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/c++.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3" >
+                        <div class="col-lg-3 col-md-3 col-6 my-3" >
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/basic_web.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/laravel.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/node.png" alt="" /></a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/android.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/bootstrap.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/python.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/git.png" alt="" /></a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/jquery.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/mongo.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/flutter.png" alt="" /></a>
                         </div>
-                        <div class="col-md-3 col-sm-6 my-3">
+                        <div class="col-lg-3 col-md-3 col-6 my-3">
                             <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/skills/tensorflow.png" alt="" /></a>
                         </div>
                     </div>
@@ -132,13 +151,14 @@
         </section>
 
         <!-- Resume -->
-        <section class="page-section" id="resume">
+        <section class="page-section1" id="resume">
                 
 
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Experience</h2>
                 </div>
+                <hr>
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
@@ -203,6 +223,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <h1 style="text-align: center;">Portfolio</h1>
+                <hr>
                 <div class="row text-white">
                   <div class="col-xl-4">
                     <div class="flip-card">
