--- a/index.html
+++ b/index.html
@@ -432,10 +432,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                     <div class="inner text-center">
                         <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/hafizubaidchawla"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/ubaid-ur-rehman-469850ba"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://twitter.com/ubaid_chawla"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/ubaidchawla"><i class="fab fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
