--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Ubaid Ur Rehman</title>
 
-    <meta name="robots" content="noindex, follow" />
+    <!-- <meta name="robots" content="noindex, follow" /> -->
     <meta name="description" content="I'm working as an expert, on outwardly complex, and innovatively capable, responsive development tasks.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
@@ -27,7 +27,7 @@
             <div class="header-left d-flex align-items-center">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="assets/images/logo/logo.png" alt="Digital Agency">
+                        <img src="assets/images/logo/logo.png" alt="Ubaid Ur Rehman">
                     </a>
                 </div>
                 <div class="ml--50">
@@ -70,7 +70,7 @@
         <div class="inner">
             <div class="popup-menu-top">
                 <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo/logo-symbol-dark.png" alt="imroz"></a>
+                    <a href="index.html"><img src="assets/images/logo/logo.png" alt="Ubaid Ur Rehman"></a>
                 </div>
                 <div class="close-menu d-block d-lg-none">
                     <span class="closeTrigger">
@@ -426,7 +426,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                     <div class="inner">
-                        <div class="logo text-center text-sm-left mb_sm--20"><a href="index.html"><img src="assets/images/logo/logo.png" alt="Logo images"></a></div>
+                        <div class="logo text-center text-sm-left mb_sm--20"><a href="index.html"><img src="assets/images/logo/logo.png" alt="Ubaid Ur Rehman"></a></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
