changes for SEO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Ubaid Ur Rehman</title>
+    <title>Ubaid Ur Rehman - Solving your digital Problems</title>
 
     <!-- <meta name="robots" content="noindex, follow" /> -->
     <meta name="description" content="I'm working as an expert, on outwardly complex, and innovatively capable, responsive development tasks.">
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/new.css">
 </head>
 
 <body>
@@ -116,7 +115,7 @@
                 <div class="container">
                     <div class="row row--35">
                         <div class="col-lg-5">
-                            <div class="thumbnail"><img class="w-100" src="assets/images/about/main-image2.png" alt="About Images"></div>
+                            <div class="thumbnail"><img class="w-100" src="assets/images/about/main-image2.png" alt="Ubaid Ur Rehman"></div>
                         </div>
                         <div class="col-lg-7">
                             <div class="about-inner inner">
@@ -217,7 +216,7 @@
                                                         </li>
                                                     </ul>
                                                     <br>
-                                                    <p class="description mt_dec--20">Starting as a mediocre student and being able to adjust to semester system was never easy. But by the end of freshman year I learned alot. Transformed my self to a good student along with some basic experience of web development before starting my sophomore year. Ended the degree on a high with the tag of being a good Student and an experienced Web Developer.</p>
+                                                    <p class="description mt_dec--20">Starting as a mediocre student and being able to adjust to semester system was never easy. But by the end of freshman year I learned a lot. Transformed my self to a good student along with some basic experience of web development before starting my sophomore year. Ended the degree on a high with the tag of being a good Student and an experienced Web Developer.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -320,7 +319,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="https://getmehired.co/interviewprep"><img src="assets/images/portfolio/getmehired.png"></a>
+                                    <a href="https://getmehired.co/interviewprep"><img src="assets/images/portfolio/getmehired.png" alt="GetMeHired"></a>
                             </div>
                         </div>    
                     </div>
@@ -328,7 +327,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="https://bambu.co/solutions/asset-management"><img src="assets/images/portfolio/bambu.png"></a>
+                                    <a href="https://bambu.co/solutions/asset-management"><img src="assets/images/portfolio/bambu.png" alt="Bambu"></a>
                             </div>
                         </div>    
                     </div>
@@ -336,7 +335,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="https://foxchapelpublishing.com/news/chili/"><img src="assets/images/portfolio/chili.png"></a>
+                                    <a href="https://foxchapelpublishing.com/news/chili/"><img src="assets/images/portfolio/chili.png" alt="Chili"></a>
                             </div>
                         </div>    
                     </div>
@@ -344,7 +343,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="http://linnasmart.com/"><img src="assets/images/portfolio/linnasmart.png"></a>
+                                    <a href="http://linnasmart.com/"><img src="assets/images/portfolio/linnasmart.png" alt="Linnas Mart"></a>
                             </div>
                         </div>    
                     </div>
@@ -352,7 +351,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="http://sunexsolar.com.pk/"><img src="assets/images/portfolio/sunexsolar.png"></a>
+                                    <a href="http://sunexsolar.com.pk/"><img src="assets/images/portfolio/sunexsolar.png" alt="Sunex Solar"></a>
                             </div>
                         </div>    
                     </div>
@@ -360,7 +359,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12 content">
                         <div class="scrolling-image mt--40">
                             <div class="fl-module-content">
-                                    <a href="https://roadtrust.ca/"><img src="assets/images/portfolio/roadtrust.png"></a>
+                                    <a href="https://roadtrust.ca/"><img src="assets/images/portfolio/roadtrust.png" alt="RoadTrust"></a>
                             </div>
                         </div>    
                     </div>
@@ -511,12 +510,7 @@
       </div>
 
     <script src="assets/js/vendor/jquery.js"></script>
-    <!-- Bootstrap JS -->
     <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/vendor/video.js"></script>
-
-
-    <!-- main JS -->
     <script src="assets/js/main.js"></script>
 
 </body>
