--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="col-lg-12">
                         <div class="inner text-left">
                             <h4 class="theme-gradient font-500">Freelance Developer</h4>
-                            <h1 class="title">Hello, I’m <span>Ubaid.</span></h1>
+                            <h1 class="title">Hello, I’m <span>Ubaid Ur Rehman.</span></h1>
                             <p class="description">I'm working as an expert, on outwardly complex, and innovatively capable, <br> responsive development tasks.</p>
                             <div class="slide-btn">
                                 <a class="btn-default" href="./assets/pdf/resume.pdf" download="Ubaid's Resume">Download CV</a>
