--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Ubaid Ur Rehman - Solving your digital Problems</title>
+    <title>Ubaid's Portfolio - Solving your digital Problems</title>
 
     <!-- <meta name="robots" content="noindex, follow" /> -->
     <meta name="description" content="I'm working as an expert, on outwardly complex, and innovatively capable, responsive development tasks.">
@@ -383,7 +383,7 @@
                 <div class="col-lg-12">
                     <div class="inner">
                         <div class="section-title"><span class="subtitle">Let's Connect</span>
-                            <h2 class="title">Submit a Query</h2>
+                            <h2 class="title">Hire Me to Solve your digital Problems</h2>
                             <div class="im_address_inner">
                                 <div class="im_address">
                                     <span>Call Me:</span>
@@ -424,26 +424,15 @@
         <div class="wrapper plr--50 plr_sm--20">
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                    <div class="inner">
-                        <div class="logo text-center text-sm-left mb_sm--20"><a href="index.html"><img src="assets/images/logo/logo.png" alt="Ubaid Ur Rehman"></a></div>
-                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                     <div class="inner text-center">
-                        <ul class="social-share rn-lg-size d-flex justify-content-center liststyle">
-                            <li><a href="https://www.facebook.com/hafizubaidchawla"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/ubaid-ur-rehman-469850ba"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://twitter.com/ubaid_chawla"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://github.com/ubaidchawla"><i class="fab fa-github"></i></a></li>
-                        </ul>
+                        <div class="text">
+                            <p>Copyright © 2021 Ubaid's Portfolio. All Rights Reserved.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 col-12">
-                    <div class="inner text-lg-right text-center mt_md--20 mt_sm--20">
-                        <div class="text">
-                            <p>Copyright © 2021 Chawla Systems. All Rights Reserved.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
