--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 </div>
             </div>
             <ul class="mainmenu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a class="mobile" href="#">Home</a></li>
+                <li><a class="mobile" href="#about">About</a></li>
+                <li><a class="mobile" href="#testimonials">Testimonials</a></li>
+                <li><a class="mobile" href="#portfolio">Portfolio</a></li>
             </ul>
         </div>
     </div>
