minor text changes

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                         <div class="inner text-left">
                             <h4 class="theme-gradient font-500">Freelance Developer</h4>
                             <h1 class="title">Hello, I’m <span>Ubaid Ur Rehman.</span></h1>
-                            <p class="description">I'm working as an expert, on outwardly complex, and innovatively capable, <br> responsive development tasks.</p>
+                            <p class="description">I'm working as an expert, on outwardly complex, and innovatively capable, <br> responsive development tasks. I would love to listen to your digital <br> problems and provide you with possible solutions.</p>
                             <div class="slide-btn">
-                                <a class="btn-default" href="./assets/pdf/resume.pdf" download="Ubaid's Resume">Download CV</a>
+                                <a class="btn-default" href="#contact">Let's Connect</a>
                             </div>
                         </div>
                     </div>
@@ -167,6 +167,8 @@
                                                                 <div role="progressbar" class="progress-bar wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay=".6s" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                                                             </div><span class="label">80%</span>
                                                         </div>
+                                                        <br>
+                                                        <a class="btn-default" href="./assets/pdf/resume.pdf" download="Ubaid's Resume">Download CV</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -383,7 +385,7 @@
                 <div class="col-lg-12">
                     <div class="inner">
                         <div class="section-title"><span class="subtitle">Let's Connect</span>
-                            <h2 class="title">Hire Me to Solve your digital Problems</h2>
+                            <h2 class="title">Get Solutions for your Digital Problems</h2>
                             <div class="im_address_inner">
                                 <div class="im_address">
                                     <span>Call Me:</span>
