--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
                                             <div class="tab-pane fade" id="rn-experience" role="tabpanel" aria-labelledby="experience">
                                                 <div class="single-tab-content">
                                                     <ul>
-                                                        <li><a href="">Top Rated Freelancer
-                                                                <span> -
-                                                                    Upwork</span></a> October 2020 -
+                                                        <li><span class="a">Top Rated Freelancer
+                                                        </span><span> -
+                                                                    Upwork</span> October 2020 -
                                                             Current</li>
-                                                        <li><a href="">Full Stack Developer
-                                                                <span> -
-                                                                    DevZone IT</span></a> July 2020 - October 2020</li>
-                                                        <li><a href=""> Full Stack Developer
-                                                                <span> - GIKI Web Team
-                                                                </span></a>October 2018 - June 2020</li>
-                                                        <li><a href="">Full Stack Development Intern<span> - Pak Servers
-                                                            </span></a>July 2019 - August 2019</li>
-                                                        <li><a href="">Frontend Development Intern<span> - Creatrixe Software
-                                                                </span></a>July 2018 - August 2018</li>
+                                                        <li><span class="a">Full Stack Developer
+                                                        </span><span> -
+                                                                    DevZone IT</span> July 2020 - October 2020</li>
+                                                        <li><span class="a"> Full Stack Developer
+                                                        </span><span> - GIKI Web Team
+                                                                </span>October 2018 - June 2020</li>
+                                                        <li><span class="a">Full Stack Development Intern</span><span> - Pak Servers
+                                                            </span>July 2019 - August 2019</li>
+                                                        <li><span class="a">Frontend Development Intern</span><span> - Creatrixe Software
+                                                                </span>July 2018 - August 2018</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -212,9 +212,9 @@
                                             <div class="tab-pane fade" id="rn-education" role="tabpanel" aria-labelledby="education">
                                                 <div class="single-tab-content">
                                                     <ul>
-                                                        <li><a href="">Bachelors in Computer Sciences<span>
+                                                        <li><span class="a">Bachelors in Computer Sciences</span><span>
                                                                     - Ghulam Ishaq Khan Institute of Engineering Sciences and Technology, KPK, Pakistan
-                                                                </span></a> June 2020
+                                                                </span> June 2020
                                                         </li>
                                                     </ul>
                                                     <br>
