--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="inner text-left">
-                            <h4 class="theme-gradient font-500">Freelance Developer</h4>
+                            <h2 class="theme-gradient work-title">Freelance Developer</h2>
                             <h1 class="title">Hello, I’m <span>Ubaid Ur Rehman.</span></h1>
                             <p class="description">I'm working as an expert, on outwardly complex, and innovatively capable, <br> responsive development tasks. I would love to listen to your digital <br> problems and provide you with possible solutions.</p>
                             <div class="slide-btn">
@@ -144,25 +144,25 @@
                                                 <div class="single-tab-content">
                                                     <div class="rn-progress-bar progress-bar--1 mt_dec--10">
                                                         <div class="single-progress">
-                                                            <h6 class="title">Backend Development</h6>
+                                                            <h2 class="title">Backend Development</h2>
                                                             <div class="progress">
                                                                 <div role="progressbar" class="progress-bar wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay=".3s" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
                                                             </div><span class="label">95%</span>
                                                         </div>
                                                         <div class="single-progress">
-                                                            <h6 class="title">Frontend Development</h6>
+                                                            <h2 class="title">Frontend Development</h2>
                                                             <div class="progress">
                                                                 <div role="progressbar" class="progress-bar wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay=".4s" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                                                             </div><span class="label">85%</span>
                                                         </div>
                                                         <div class="single-progress">
-                                                            <h6 class="title">Third Party App/Bot Development</h6>
+                                                            <h2 class="title">Third Party App/Bot Development</h2>
                                                             <div class="progress">
                                                                 <div role="progressbar" class="progress-bar wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay=".5s" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
                                                             </div><span class="label">75%</span>
                                                         </div>
                                                         <div class="single-progress">
-                                                            <h6 class="title">Server Management</h6>
+                                                            <h2 class="title">Server Management</h2>
                                                             <div class="progress">
                                                                 <div role="progressbar" class="progress-bar wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay=".6s" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                                                             </div><span class="label">80%</span>
@@ -445,7 +445,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
           <div class="modal-content" id="style-2">
             <div class="modal-header border-bottom-0">
-              <h5 class="modal-title" id="exampleModalLabel">More Projects</h5>
+              <h2 class="modal-title" id="exampleModalLabel">More Projects</h2>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -453,14 +453,14 @@
             <div class="container grid-container list-view">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">IDS Using Artificial Intelligence (04/2019 - 05/2020)</h5>
+                        <h2 class="card-title">IDS Using Artificial Intelligence (04/2019 - 05/2020)</h2>
                         <p class="card-text">An approach to replace rule base security with Intelligent security. Admin Panel was Developed Using MERN Stack.</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/FYP" ><span>Git Repo</span></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Denoising Foggy Images (03/2019 - 04/2019)</h5>
+                        <h2 class="card-title">Denoising Foggy Images (03/2019 - 04/2019)</h2>
                         <p class="card-text">Artificial Intelligence Project Deep Convolutional Neural Network used For Semester Project</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/Denoising-Foggy-Images" ><span>Git Repo</span></a>
                     </div>
@@ -468,28 +468,28 @@
                 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Job Portal (05/2020 - 06/2020)</h5>
+                        <h2 class="card-title">Job Portal (05/2020 - 06/2020)</h2>
                         <p class="card-text">Using Laravel as MVC framework. Bootstrap and jQuery for frontend Development.</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/job-portal" ><span>Git Repo</span></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Doctor Appointment System (10/2018 - 11/2018)</h5>
+                        <h2 class="card-title">Doctor Appointment System (10/2018 - 11/2018)</h2>
                         <p class="card-text">Web app using PHP,Bootstrap and Android App using Android Studio</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/Online-Doctor-Appointment-System" ><span>Git Repo</span></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Library Management System (03/2018 - 04/2018)</h5>
+                        <h2 class="card-title">Library Management System (03/2018 - 04/2018)</h2>
                         <p class="card-text">Using PHP and MySQL this Semester Project. CSS and Bootstrap were used for frontend.</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/Library" ><span>Git Repo</span></a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Clustering by Density (03/2017 - 04/2017)</h5>
+                        <h2 class="card-title">Clustering by Density (03/2017 - 04/2017)</h2>
                         <p class="card-text">Making Clusters of the data using data structure (Graphs) in 3rd Semester</p>
                         <a class="btn-git" href="https://github.com/ubaidchawla/Clustering" ><span>Git Repo</span></a>
                     </div>
