--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="humberger-menu d-block d-lg-none pl--20">
                     <span class="menutrigger text-white">
-                        <i data-feather="menu"></i>
+                        <i class="fas fa-bars"></i>
                     </span>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="close-menu d-block d-lg-none">
                     <span class="closeTrigger">
-                    <i data-feather="x"></i>
+                        <i class="fas fa-times"></i>
                 </span>
                 </div>
             </div>
