--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="about-wrapper">
                 <div class="container">
                     <div class="row row--35">
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 img-display">
                             <div class="thumbnail"><img class="w-100" src="assets/images/about/main-image2.png" alt="Ubaid Ur Rehman"></div>
                         </div>
                         <div class="col-lg-7">
