--- a/thankyou.html
+++ b/thankyou.html
@@ -105,7 +105,9 @@
         </div>
     </div>
     <!-- End Popup Menu Area  -->
-
+<header class="site-header" id="header">
+		<h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
+	</header>
     <!-- start slider area -->
    <div class="main-content">
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
